feat(auth): добавлена регистрация пользователя
